# rocket_server

./: .gitignore  Cargo.toml  Dockerfile  index.html  index.js
ia/: open_ai.rs
src/: ia.rs  main.rs
src/IA/: openAI.rs
src/ia/: open_ai.rs
