[package]
name = "longlaoshi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}

lru_time_cache = "0.11.11"
openai-api-rs = "4.0.8"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }

shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"